# neural-memory

./: .gitignore  BENCHMARK_REPORT.md  Brain_Inspired_Memory_Architecture_Research.docx  TECHNICAL_AUDIT.md  benchmark_results_trained.json  benchmark_results_untrained.json  memory_system_scaffold_prompt.md  neural_upgrade_prompt.md
brain-memory/: .env.example  .gitignore  README.md  pyproject.toml
brain-memory/config/: settings.py
brain-memory/experiments/: __init__.py  eval_metrics.py  run_activation_vs_knn.py  run_baseline.py  run_capacity_scaling.py  run_episodic_only.py  run_forgetting.py  run_full_system.py  run_gat_vs_spreading.py  run_gate_vs_heuristic.py  run_hopfield_vs_knn.py  run_neural_vs_algorithmic.py  run_semantic_only.py  run_training_curves.py  run_vae_vs_clustering.py
brain-memory/memory/: __init__.py  activation.py  consolidation.py  encoder.py  episodic.py  forgetting.py  gate_network.py  graph_converter.py  hopfield_memory.py  injector.py  neural_activation.py  neural_bridge.py  neural_consolidation.py  neural_events.py  neural_working_memory.py  observer.py  pattern_separation.py  salience.py  semantic.py  trainer.py  working_memory.py
brain-memory/nlp/: __init__.py  entity_extractor.py  intent_detector.py  topic_tagger.py
brain-memory/pipeline/: __init__.py  llm_chat.py  local_llm.py  memory_pipeline.py  proxy_server.py
brain-memory/scripts/: benchmark_tiers.py  eval_recall.py  export_memory.py  finetune_memory_lora.py  generate_memory_training_data.py  seed_memory.py  setup_openwebui.sh  start_brain.py  start_chat.py  start_neural_chat.py  train_fast_weight.py  train_offline.py  train_projection.py
brain-memory/storage/: __init__.py  graph_store.py  sqlite_store.py
brain-memory/tests/: conftest.py  test_activation.py  test_consolidation.py  test_data_loader.py  test_dopaminergic_gate.py  test_episodic.py  test_eval_and_integration.py  test_fast_weight.py  test_forgetting_network.py  test_gat_activation.py  test_hopfield_memory.py  test_injector.py  test_integration.py  test_intent_detector.py  test_modular_hopfield.py  test_neural_integration.py  test_pattern_separation.py  (+6 more)
(+8 files in other folders)
