[project]
name = "brain-memory"
version = "0.1.0"
description = "Brain-inspired memory system for LLMs — hippocampus-cortex cognitive architecture with spreading activation"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Brain Memory Research" }]

dependencies = [
    "torch>=2.1.0",
    "sentence-transformers>=2.2.2",
    "networkx>=3.2",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
neural = [
    "torch-geometric>=2.5.0",
]
local = ["bitsandbytes>=0.41.0", "accelerate>=0.25.0", "peft>=0.7.0"]
data = [
    "datasets>=2.14.0",
    "huggingface-hub>=0.17.0",
]
nlp = ["spacy>=3.7.0"]
viz = [
    "pyvis>=0.3.2",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "streamlit>=1.29.0",
    "gradio>=4.8.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]
all = ["brain-memory[neural,nlp,viz,dev,data]"]

[project.scripts]
brain-proxy = "pipeline.proxy_server:main"
brain-chat = "pipeline.llm_chat:main"
brain-seed = "scripts.seed_memory:main"
brain-export = "scripts.export_memory:main"
brain-train = "scripts.train_offline:main"
brain-eval = "scripts.eval_recall:main"
brain-dashboard = "visualization.dashboard:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "data", "memory", "pipeline", "nlp", "storage", "experiments", "visualization", "scripts"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
